--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ google-api-python-client = "^2.85.0"
 python-dotenv = "^1.0.0"
 colorama = "^0.4.6"
 duckduckgo-search = "^2.8.5"
+sqlitedict = "^2.1.0"
 
 [tool.poetry.group.types.dependencies]
 boto3-stubs = {extras = ["s3", "rekognition"], version = "^1.26.109"}
@@ -131,17 +132,17 @@ omit = [
 ]
 
 [tool.black]
-line-length = 80
+line-length = 75
 target-version = ['py39']
 extend-exclude = "^/migrations$"
 
 [tool.ruff]
-line-length = 80
+line-length = 75
 target-version = "py310"
 
 [tool.isort]
 profile = "black"
-line_length = 80
+line_length = 75
 py_version = '39'
 
 [tool.mypy]
